--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   background-color: #231F20;
 }
 
-.bgDSAwhite, .orbit-bullets button.is-active, .orbit-bullets button:hover {
+.bg-DSAwhite, .orbit-bullets button.is-active, .orbit-bullets button:hover {
 	background-color: #ffffff;
 }
 
