--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,9 +439,35 @@ position: absolute; top:0; left: 0; width: 100%; min-height: 300px;
 
 /*********
 *
-* Eva Mockup
+* Eva 2017 Theme
 *
 **********/
+
+.dsa-alert.callout {
+  background-color: #0a0a0a;
+  color: white;
+}
+
+.dsa-alert.callout p {
+  margin-bottom: 0;
+  display: inline;
+}
+
+button.dsa-close {
+  background-color: transparent;
+  color: white;
+  font-family: ManifoldDSA-Medium, Helvetica, Tahoma, Sans-Serif;
+  font-weight: 400;
+  line-height: 2rem;
+  margin-top: 0.25rem;
+  margin-left:1rem;
+}
+
+.dsa-alert-icon {
+  margin-right:1rem;
+  width: 2.5rem;
+  height: auto;
+}
 
 .button-group .button {
 margin-right: 1em;
