--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -720,6 +720,15 @@ h1.home-title {
 .sdsa-2017-global-footer section:nth-of-type(1), .sdsa-2017-global-footer section:nth-of-type(2) {
     margin-right: 5%
 }
+
+.padding-bottom {
+	padding-bottom: 3rem;
+}
+
+.padding-top, .footer.padding-top {
+	padding-top: 3rem;
+}
+
 .sdsa-2017-frontispiece {
     padding-bottom: 50px
 }
