--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,6 +365,31 @@ button.dark, .button.dark, #page #mc_embed_signup .button.dark, .pagination .but
     font-family: ManifoldDSA-Medium, Helvetica, Tahoma, Sans-Serif
 }
 
+.archive-card {
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
+  margin-bottom: 2rem;
+  background-color: white;
+}
+
+.archive-card.bdr-stripe-red {
+  padding: 24px 24px 12px 24px;
+}
+
+.archive-card .row.archive-item-image {
+  margin: 0 -13px 1rem -13px;
+}
+
+.archive-item-image a {
+  display: block;
+  min-height: 12rem;
+  background: no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+}
+
 .makegoogleresponsive {
  
 position: relative; height: 0;
