--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,18 +365,29 @@ button.dark, .button.dark, #page #mc_embed_signup .button.dark, .pagination .but
     font-family: ManifoldDSA-Medium, Helvetica, Tahoma, Sans-Serif
 }
 
-.archive-card {
-  box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
+.archive-header-card {
+  box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.25);
   margin-bottom: 2rem;
   background-color: white;
+  padding: 2rem;
 }
 
 .archive-card.bdr-stripe-red {
   padding: 24px 24px 12px 24px;
+  background-color: white;
+  margin-bottom: 2rem;
 }
 
 .archive-card .row.archive-item-image {
   margin: 0 -13px 1rem -13px;
+}
+
+.archive #content {
+  background-color: #ddd;
+}
+
+.archive #content #inner-content {
+  padding: 0rem 0rem 1rem 0rem;
 }
 
 .archive-item-image a {
@@ -387,7 +398,6 @@ button.dark, .button.dark, #page #mc_embed_signup .button.dark, .pagination .but
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
 }
 
 .makegoogleresponsive {
@@ -1009,6 +1019,18 @@ input#mce-FNAME::placeholder, input#mce-LNAME::placeholder, input#mce-EMAIL::pla
     cursor: pointer;
     transition: all 150ms
 }
+
+input[type="submit"] {
+  background-color: #EC1F27;
+  padding: 1rem;
+  color: white;
+  border: 0px;
+}
+
+input[type="submit"]:hover {
+  background-color: black;
+}
+
 .sdsa-2017-frontispiece .diptych .newsletter-signup input[type="submit"].small {
     padding: 6px 13px 3px
 }
