Update Tab UI Element Styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,35 @@ position: absolute; top:0; left: 0; width: 100%; min-height: 300px;
 	line-height:1.2em;
 }
 
+/**
+*  Tabs 
+**/
+
+.tabs {
+	background-color: #ec1f27;
+	border-bottom: 0;
+}
+
+.tabs-title>a {
+	color: white;
+	font-size: 1rem;
+}
+
+.tabs-title>a:focus, .tabs-title>a[aria-selected=true] {
+	color: black;
+	background: white;
+	box-shadow: 2px -2px 4px rgba(0,0,0,0.2);
+}
+
+.tabs-title>a:hover {
+	color: white;
+	background: black;
+}
+
+.tabs-panel {
+	box-shadow: 2px -2px 4px rgba(0,0,0,0.2);
+}
+
 /*********
 *
 * Eva 2017 Theme
