--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,26 +1188,26 @@ input[type="submit"]:hover {
 
 @media screen and (min-width: 1701px) {
     #content #dsa-home-row-1 {
-        background: url("../images/scene-01-waves.png") repeat-x left 556px, url("../images/scene-02-trees.png") no-repeat -240px 443px, url("../images/scene-03-spaceneedle.png") no-repeat 22% 47px, url("../images/scene-04-mountain.png") no-repeat 45% 408px, url("../images/scene-05-cloud1.png") no-repeat 42% 235px, url("../images/scene-06-cloud2.png") no-repeat 87% 54px, url("../images/scene-07-sky.png") no-repeat left top;
-        background-size: 204px 95px, 480px 208px, 152px 604px, 558px 243px, 126px 66px, 148px 64px, 100% 651px;
+        background: url("../images/ui-glyphs/frontispiece-scenery-wave.png") repeat-x left 556px, url("../images/ui-glyphs/diamond-head-2.png") no-repeat 0% 207px, url("../images/ui-glyphs/rainbow.png") no-repeat -72% -98px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud1.png") no-repeat 42% 235px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud2.png") no-repeat 87% 54px, url("../images/ui-glyphs/frontispiece-scenery-sky.png") no-repeat left top;
+        background-size: 204px 95px, 883px, 1280px, 126px 66px, 148px 64px, 100% 651px;
     }
 }
 @media screen and (min-width: 1351px) and (max-width: 1700px) {
     #content #dsa-home-row-1 {
-        background: url("../images/scene-01-waves.png") repeat-x left 556px, url("../images/scene-02-trees.png") no-repeat -21% 443px, url("../images/scene-03-spaceneedle.png") no-repeat 22% 47px, url("../images/scene-04-mountain.png") no-repeat 45% 408px, url("../images/scene-05-cloud1.png") no-repeat 42% 235px, url("../images/scene-06-cloud2.png") no-repeat 87% 54px, url("../images/scene-07-sky.png") no-repeat left top;
-        background-size: 204px 95px, 480px 208px, 152px 604px, 558px 243px, 126px 66px, 148px 64px, 100% 651px;
+        background: url("../images/ui-glyphs/frontispiece-scenery-wave.png") repeat-x left 556px, url("../images/ui-glyphs/diamond-head-2.png") no-repeat 0% 207px, url("../images/ui-glyphs/rainbow.png") no-repeat -72% -98px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud1.png") no-repeat 42% 235px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud2.png") no-repeat 87% 54px, url("../images/ui-glyphs/frontispiece-scenery-sky.png") no-repeat left top;
+        background-size: 204px 95px, 883px, 1280px, 126px 66px, 148px 64px, 100% 651px;
     }
 }
 @media screen and (min-width: 1100px) and (max-width: 1390px) {
     #content #dsa-home-row-1 {
-        background: url("../images/scene-01-waves.png") repeat-x left 556px, url("../images/scene-02-trees.png") no-repeat -30% 443px, url("../images/scene-03-spaceneedle.png") no-repeat 22% 47px, url("../images/scene-04-mountain.png") no-repeat 45% 408px, url("../images/scene-05-cloud1.png") no-repeat 42% 235px, url("../images/scene-06-cloud2.png") no-repeat 87% 54px, url("../images/scene-07-sky.png") no-repeat left top;
-        background-size: 204px 95px, 480px 208px, 152px 604px, 558px 243px, 126px 66px, 148px 64px, 100% 651px;
+        background: url("../images/ui-glyphs/frontispiece-scenery-wave.png") repeat-x left 556px, url("../images/ui-glyphs/diamond-head-2.png") no-repeat 0% 207px, url("../images/ui-glyphs/rainbow.png") no-repeat -72% -98px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud1.png") no-repeat 42% 235px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud2.png") no-repeat 87% 54px, url("../images/ui-glyphs/frontispiece-scenery-sky.png") no-repeat left top;
+        background-size: 204px 95px, 883px, 1280px, 126px 66px, 148px 64px, 100% 651px;
     }
 }
 @media screen and (min-width: 900px) and (max-width: 1099px) {
     #content #dsa-home-row-1 {
-        background: url("../images/scene-01-waves.png") repeat-x left 556px, url("../images/scene-02-trees.png") no-repeat -40% 443px, url("../images/scene-03-spaceneedle.png") no-repeat 22% 47px, url("../images/scene-04-mountain.png") no-repeat 45% 408px, url("../images/scene-05-cloud1.png") no-repeat 42% 235px, url("../images/scene-06-cloud2.png") no-repeat 87% 54px, url("../images/scene-07-sky.png") no-repeat left top;
-        background-size: 204px 95px, 480px 208px, 152px 604px, 558px 243px, 126px 66px, 148px 64px, 100% 651px;
+        background: url("../images/ui-glyphs/frontispiece-scenery-wave.png") repeat-x left 556px, url("../images/ui-glyphs/diamond-head-2.png") no-repeat 0% 207px, url("../images/ui-glyphs/rainbow.png") no-repeat -72% -98px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud1.png") no-repeat 42% 235px, url("../images/ui-glyphs/frontispiece-scenery-elevation-cloud2.png") no-repeat 87% 54px, url("../images/ui-glyphs/frontispiece-scenery-sky.png") no-repeat left top;
+        background-size: 204px 95px, 883px, 1280px, 126px 66px, 148px 64px, 100% 651px;
     }
 }
 @media screen and (max-width: 899px) {
