Update WP theme info

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*****************************************************************
-Theme Name: Seattle Democratic Socialists of America 2016
+Theme Name: Democratic Socialists of America Honolulu 2018
 Theme URI: http://seattledsa.org/
-Description: Designed by the Design & Communications Team at the Seattle Democratic Socialists of America. Developed using Joints WP, a barebones theme making use of Foundation 6 for Sites.
-Author: Seattle Democratic Socialists of America (based on Joints WP)
+Description: Originally esigned by the Design & Communications Team at the Seattle Democratic Socialists of America, modified by some comrades at DSA Honolulu for use by their chapter. Developed using Joints WP, a barebones theme making use of Foundation 6 for Sites.
+Author: Seattle Democratic Socialists of America/DSA Honolulu(based on Joints WP)
 Author URI: http://www.yoururlhere.com
 Version: 4.0
 License: GNU General Public License & MIT
